实现第一次加载定位功能，加入全局过滤器

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <title>where-to-go</title>
     <!-- 引入百度地图API -->
-    <!-- <script type="text/javascript" src="http://api.map.baidu.com/getscript?v=2.0&ak=c7XkRhNZeWC7shy2yv6m74PNt2DTPQdZ"></script> -->
+    <script type="text/javascript" src="http://api.map.baidu.com/getscript?v=2.0&ak=c7XkRhNZeWC7shy2yv6m74PNt2DTPQdZ"></script>
   </head>
   <body>
     <div id="app"></div>
